--- a/Space_Invaders.html
+++ b/Space_Invaders.html
@@ -11,6 +11,18 @@
 		ctx.fillRect(150, 150, 20,20);
 		ctx.stroke();
 	}
+	function game() {
+	
+	}
+	function draw() {
+
+	}
+	function animate() {
+
+	}
+	function main() {
+
+}
 </script>
 <style>
 	body{
